Ensure OutputVoronoi is enabled before DisplayOrochi
Otherwise no output led values are ready to be copied towards
DisplayOrochi.

--- a/colorchord2/orochi.conf
+++ b/colorchord2/orochi.conf
@@ -84,7 +84,7 @@ amppow = 2.510
 distpow = 1.500
 
 # Drive the top level
-#outdrivers = DisplayArray, DisplayOrochi
+#outdrivers = OutputVoronoi, DisplayArray, DisplayOrochi
 #lightsfile = /dev/ttyACM0
 #lightx = 5
 #lighty = 5
@@ -92,7 +92,7 @@ distpow = 1.500
 #command = C
 
 # Drive the lower level
-outdrivers = OutputLinear, DisplayOrochi
+outdrivers = OutputVoronoi, OutputLinear, DisplayOrochi
 lightsfile = /dev/ttyACM0
 leds = 8
 command = B
